# talent-olympics-dao-voting

./: Anchor.toml  README.md  package.json
programs/talent-olympics-dao-voting/: Cargo.toml
programs/talent-olympics-dao-voting/src/: constants.rs  error.rs  lib.rs
programs/talent-olympics-dao-voting/src/instructions/: close_proposal.rs  init_proposal.rs  mod.rs  vote.rs
programs/talent-olympics-dao-voting/src/state/: member.rs  mod.rs  proposal.rs
tests/: talent-olympics-dao-voting.ts
